# page-xml-wrapper

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: checks_tests_docs.yml  ci.yml  publish.yml
page_xml/: __init__.py  page_xml.py
pygexml/: __init__.py  geometry.py  image.py  page.py  strategies.py  svg.py
test/: test_geometry.py  test_image.py  test_init.py  test_page.py  test_page_xml.py  test_svg.py
test_util/: strategies.py
