[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pygexml"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "lxml",
    "lxml-stubs",
    "hypothesis",
]

[tool.setuptools.package-data]
pygexml = ["py.typed"]

[project.optional-dependencies]
dev = ["mypy", "pyright", "black"]
test = ["pytest"]
docs = ["pdoc"]

[tool.setuptools]
packages = ["pygexml"]

[tool.mypy]
strict = true
